# temaPaoo

src/: CMakeLists.txt  main.cxx
src/Student/: CMakeLists.txt  MasterStudent.cpp  MasterStudent.h  Student.cpp  Student.h  UniStudent.cpp  UniStudent.h
